[package]
name = "learning-tower-hyper-reqwest"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.6", features = ["full"] }
tower = { version = "0.5", features = ["retry"] }
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.3"
#opentelemetry = { version = "0.2", features = ["full"] }
opentelemetry = { version = "0.29"}
opentelemetry-jaeger = "0.22"
futures = "0.3"
http = "1.3"
http-body = { version = "1.0.0"}
http-body-util = { version = "0.1.0" }
pin-project-lite = "0.2"
hyper-util = { version = "0.1.11", features = ["tokio", "service"] }

[features]
