[package]
name = "learning-tower-hyper-reqwest"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.6", features = ["full"] }
tower = { version = "0.5", features = ["retry"] }
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.30"

#opentelemetry = { version = "0.2", features = ["full"] }
opentelemetry = { version = "0.29", futures = ["full"] }

opentelemetry_sdk = { version = "0.29.0", futures = ["full"] }
opentelemetry-otlp = { version = "0.29.0", features = ["tonic", "grpc-tonic", "metrics"] }
opentelemetry-stdout = { version = "0.29.0" }

# 已经不需要了，使用OTLP(opentelemetry-otlp)协议与Prometheus进行通信,
# Prometheus支持OTLP协议
#opentelemetry-prometheus = "0.29"

# 暂时不需要了，使用OTLP(opentelemetry-otlp)协议与Jaeger进行通信,
# 不使用Jaeger的Rust SDK与Jaeger原生协议通信
#opentelemetry-jaeger = "0.22"
futures = "0.3"
http = "1.3"
http-body = { version = "1.0.0" }
http-body-util = { version = "0.1.0" }
pin-project-lite = "0.2"
hyper-util = { version = "0.1.11", features = ["tokio", "service"] }
serde = { version = "1.0.219", features = ["derive"] }
axum = "0.8.3"
bytes = "1"

[features]
default = []
# service组，只能开启一个
# 启用axum service
service-axum = []
# 启用hyper+tower原生service
service-my = []

# middleware组，只能开启一个
# 启用axum可用的middleware
middleware-axum = []
# 启用自己编写的hyper tower service可用middleware
middleware-my = []
# 启用通用的标准tower middleware
middleware-tower = []